common-applications/opengauss-hk-new/etherpad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherpad-service
  namespace: etherpad
spec:
  ports:
  - name: ether-http
    port: 80
    protocol: TCP
    targetPort: 9001
  selector:
    app: control-etherpad
  type: ClusterIP
