common-applications/opengauss-hk-new/etherpad/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      location ^~ /admin {
        deny all;
      }
      location ^~ /stats {
        deny all;
      }
  name: etherpad-ingress
  namespace: etherpad
spec:
  rules:
  - host: etherpad.opengauss.org
    http:
      paths:
      - backend:
          serviceName: etherpad-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - etherpad.opengauss.org
    secretName: etherpad-tls
